--- a/catalog.html
+++ b/catalog.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header>
+<body class="page-body inner-page">
+  <header class="main-header">
 
     <div class="header-top">
-      <a class="header-logo" href="" id="top">
-        <img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
-      </a>
-      <form action=""></form>
-      <ul class="product-order">
-        <li class="product-order-item product-marker"><a href="">Корзина: 0</a></li>
-        <li class="product-order-item product-cart"><a href="">Корзина: 10</a></li>
-        <li class="product-order-item ordering"><a href="">Оформить заказ</a></li>
-      </ul>
-    </div>
-    <div class="header-middle">
-      <div class="header-midle-block">
-        <p>Интернет-магазин<br>
-          строительных материалов<br>
-          и инструментов для ремонта</p>
-      </div>
-      <div class="contact-for-us">
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </div>
-      <div class="user-menu">
-        <div class="user-logo">
-          <p class="user-name">Равшан Джамшутович</p>
-          <button type="button"></button>            <!--КНОПКА ВЫХОДА ИЗ ПРОФИЛЯ-->
-        </div>
-        <ul class="user-menu">
-          <li class="user-menu-link"><a href="">Мои заказы</a></li>
-          <li class="user-menu-link"><a href="">Личный кабинет</a></li>
+      <div class="header-top-wrapper">
+        <a class="header-logo" href="" >
+          <img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
+        </a>
+        <form action="">
+          <input type="search" name="search" >
+        </form>
+        <ul class="product-order">
+          <li class="product-order-item product-marker"><a href="">Закладки: 0</a></li>
+          <li class="product-order-item product-cart"><a href="">Корзина: 0</a></li>
+          <li class="product-order-item ordering"><a href="">Оформить заказ</a></li>
         </ul>
       </div>
     </div>
+    <div class="header-midle">
+      <div class="header-midle-wrapper">
+        <div class="header-midle-block">
+          <p>Интернет-магазин<br>
+            строительных материалов<br>
+            и инструментов для ремонта</p>
+        </div>
+        <div class="contact-for-us">
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div class="user-menu ">
+          <a class="user-button login-link" href="">Войти</a>
+          <a class="user-button registr-link" href="">Регистрация</a>
+        </div>
+      </div>
+    </div>
     <nav class="site-navigation">
-      <ul class="site-navigation-list">
-        <li class="site-navigation-item"><a href="index.html">Главная</a></li>
-        <li class="site-navigation-item"><a href="">Компания</a></li>
-        <li class="site-navigation-item"><a href="">Каталог</a></li>
-        <li class="site-navigation-item"><a href="">Новости</a></li>
-        <li class="site-navigation-item"><a href="">Спецпредложения</a></li>
-        <li class="site-navigation-item"><a href="">Доставка</a></li>
-        <li class="site-navigation-item"><a href="">Контакты</a></li>
-      </ul>
+      <div class="navigation-wrapper">
+        <ul class="site-navigation-list">
+          <li class="site-navigation-item"><a href="">Главная</a></li>
+          <li class="site-navigation-item"><a href="">Компания</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation-item"><a href="">Новости</a></li>
+          <li class="site-navigation-item"><a href="">Спецпредложения</a></li>
+          <li class="site-navigation-item"><a href="">Доставка</a></li>
+          <li class="site-navigation-item"><a href="">Контакты</a></li>
+        </ul>
+      </div>
     </nav>
 
   </header>
 
-  <main>
-    <h1>ПЕРФОРАТОРЫ</h1>
-    <ul>
-      <li><a href="">Каталог</a></li>
-      <li><a href="">Инструмент</a></li>
-      <li>Перфораторы</li>
-    </ul>
+  <main class="container">
+
+    <div class="main-navigation_catalog">
+      <ul class="breadcrumbs">
+        <li><a class="breadcrumbs-icon_index" href="index.html"></a></li>
+        <li><a href="">Каталог</a></li>
+        <li><a href="">Инструмент</a></li>
+        <li>Перфораторы</li>
+      </ul>
+    </div>
+    <h1 class="page-title_catalog">ПЕРФОРАТОРЫ</h1>
+
+
 
     <section>
       <h2>ФИЛЬТР:</h2>
@@ -72,138 +83,140 @@
       <!-- Здесь будет форма сортировки -->
     </section>
 
-    <section>
+    <section class="poducts-catalog">
       <h2>Список перфораторов</h2>
-      <ul>
-        <li><a href="">
-          <img src="img/product-1.jpg" alt="">
+      <ul class="products-list">
+        <li class="product-item"><a href="">
+          <img src="img/product-1.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 6000 ">
           <h3>Перфоратор BOSCH<br> BFG 6000</h3>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-2.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-2.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH<br> BFG 6000</h3>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-3.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-3.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH<br> BFG 6000</h3>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-4.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-4.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH<br> BFG 3000</h3>
           <p>22500 Р.</p>
           <button type="button">15500 Р.</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-5.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-5.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH<br> BFG 6000</h3>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </a></li>
-        <li><a href=""></a></li>
-        <img src="img/product-6.jpg" alt="">
+        <li class="product-item"><a href=""></a></li>
+        <img src="img/product-6.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 2000">
           <h3>Перфоратор BOSCH<br> BFG 2000</h3>
           <button type="button">12500 Р.</button>
-        <li><a href="">
-          <img src="img/product-7.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-7.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH<br> BFG 3000</h3>
           <p>22500 Р.</p>
           <button type="button">15500 Р..</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-8.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-8.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH<br> BFG 6000</h3>
           <p>30500 Р.</p>
           <button type="button">25500 Р.</button>
         </a></li>
-        <li><a href="">
-          <img src="img/product-9.jpg" alt="">
+        <li class="product-item"><a href="">
+          <img src="img/product-9.jpg" width="127" height="112" alt="На картинке изображен Перфоратор BOSCH BFG 2000">
           <h3>Перфоратор BOSCH<br> BFG 2000</h3>
 
           <button type="button">12500 Р.</button>
         </a></li>
       </ul>
-      <ul>
-        <li><a >1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
-        <li><a href="">СЛЕДУЮЩАЯ</a></li>
+      <ul class="catalog-page-list">
+        <li class="catalog-page-item disabled"><a >1</a></li>
+        <li class="catalog-page-item"><a href="">2</a></li>
+        <li class="catalog-page-item"><a href="">3</a></li>
+        <li class="catalog-page-item"><a href="">СЛЕДУЮЩАЯ</a></li>
       </ul>
     </section>
 
-    <section>
+    <section class="catalog_info">
       <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
       <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br>
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
+  </>
   </main>
 
-  <footer>
+  <footer class="page-footer main-footer">
+    <div class="container">
 
-
-    <div class="">
-      <a href="#top"><img src="http://placehold.it/220x47" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
-      <ul>
-        <li><a href="">Компания</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </div>
-
-
-    <div class="">
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-      </p>
-      <ul>
-        <li><a href="catalog.html">Материалы</a></li>
-        <li><a href="catalog.html">Техника</a></li>
-        <li><a href="catalog.html">Инструмент</a></li>
-        <li><a href="catalog.html">Спецпредложения</a></li>
-      </ul>
-    </div>
-
-    <div class="">
-
-      <section>
-        <h2>Авторские парва</h2>
-        <p>© 2010–2019 Компания «Техномарт»<br>
-          Все права защищены</p>
-      </section>
-                <!--/Авторские парва-->
-
-      <section>
-        <h2>Социальные сети</h2>
-        <ul>
-          <li><a href="">Вк</a></li>
-          <li><a href="">ФБ</a></li>
-          <li><a href="">ИНСТАГРАМ</a></li>
+      <div class="footer-site-navigation">
+        <a href="#"><img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item"><a href="">Компания</a></li>
+          <li class="footer-navigation-item"><a href="">Новости</a></li>
+          <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="footer-navigation-item"><a href="">Доставка</a></li>
+          <li class="footer-navigation-item"><a href="">Контакты</a></li>
         </ul>
-      </section>
-                <!--/Социальные сети-->
+      </div>
 
-      <section>
-        <h2>Разработка</h2>
-        <div class="">
-          <p>Обратная связь:</p>
-          <a href="">mail@htmlacademy.ru</a>
-        </div>
-        <div class="">
-          <p>Разработано —</p>
-          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-        </div>
-      </section>
-                <!--/Разработка-->
 
+      <div class="footer-midle-block">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+        <ul class="footer-catalog-navigation-list">
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Материалы</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Техника</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Инструмент</a></li>
+          <li class="footer-catalog-navigation-item"><a href="catalog.html">Спецпредложения</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-under-block">
+
+        <section class="copyright">
+          <h2 class="visually-hidden">Авторские парва</h2>
+          <p>© 2010–2019 Компания «Техномарт»<br>
+            Все права защищены</p>
+        </section>
+                  <!--/Авторские парва-->
+
+        <section class="socials">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="socials-list">
+            <li><a href="">Вк</a></li>
+            <li><a href="">ФБ</a></li>
+            <li><a href="">ИНСТАГРАМ</a></li>
+          </ul>
+        </section>
+                  <!--/Социальные сети-->
+
+        <section class="development">
+          <h2 class="visually-hidden">Разработка</h2>
+          <div class="feedback">
+            <p>Обратная связь:</p>
+            <a href="">mail@htmlacademy.ru</a>
+          </div>
+          <div class="development-proj">
+            <p>Разработано —</p>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+          </div>
+        </section>
+        <!--/Разработка-->
+      </div>
     </div>
+
   </footer>
 </body>
 </html>
