--- a/index.html
+++ b/index.html
@@ -12,41 +12,49 @@
     <header class="main-header">
 
       <div class="header-top">
-        <a class="header-logo" href="" >
-          <img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
-        </a>
-        <form action=""></form>
-        <ul class="product-order">
-          <li class="product-order-item product-marker"><a href="">Закладки: 0</a></li>
-          <li class="product-order-item product-cart"><a href="">Корзина: 0</a></li>
-          <li class="product-order-item ordering"><a href="">Оформить заказ</a></li>
-        </ul>
+        <div class="header-top-wrapper">
+          <a class="header-logo" href="" >
+            <img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'">
+          </a>
+          <form action="">
+            <input type="search" name="search" >
+          </form>
+          <ul class="product-order">
+            <li class="product-order-item product-marker"><a href="">Закладки: 0</a></li>
+            <li class="product-order-item product-cart"><a href="">Корзина: 0</a></li>
+            <li class="product-order-item ordering"><a href="">Оформить заказ</a></li>
+          </ul>
+        </div>
       </div>
       <div class="header-midle">
-        <div class="header-midle-block">
-          <p>Интернет-магазин<br>
-            строительных материалов<br>
-            и инструментов для ремонта</p>
-        </div>
-        <div class="contact-for-us">
-          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </div>
-        <div class="user-menu ">
-          <a class="user-button login-link" href="">Войти</a>
-          <a class="user-button registr-link" href="">Регистрация</a>
+        <div class="header-midle-wrapper">
+          <div class="header-midle-block">
+            <p>Интернет-магазин<br>
+              строительных материалов<br>
+              и инструментов для ремонта</p>
+          </div>
+          <div class="contact-for-us">
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <div class="user-menu ">
+            <a class="user-button login-link" href="">Войти</a>
+            <a class="user-button registr-link" href="">Регистрация</a>
+          </div>
         </div>
       </div>
       <nav class="site-navigation">
-        <ul class="site-navigation-list">
-          <li class="site-navigation-item"><a href="">Главная</a></li>
-          <li class="site-navigation-item"><a href="">Компания</a></li>
-          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
-          <li class="site-navigation-item"><a href="">Новости</a></li>
-          <li class="site-navigation-item"><a href="">Спецпредложения</a></li>
-          <li class="site-navigation-item"><a href="">Доставка</a></li>
-          <li class="site-navigation-item"><a href="">Контакты</a></li>
-        </ul>
+        <div class="navigation-wrapper">
+          <ul class="site-navigation-list">
+            <li class="site-navigation-item"><a href="">Главная</a></li>
+            <li class="site-navigation-item"><a href="">Компания</a></li>
+            <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+            <li class="site-navigation-item"><a href="">Новости</a></li>
+            <li class="site-navigation-item"><a href="">Спецпредложения</a></li>
+            <li class="site-navigation-item"><a href="">Доставка</a></li>
+            <li class="site-navigation-item"><a href="">Контакты</a></li>
+          </ul>
+        </div>
       </nav>
 
     </header>
@@ -58,28 +66,40 @@
       <section class="product-categories">
         <h2 class="visually-hidden">Категории товаров</h2>
         <ul class="categories-list">
-          <li class="categories-item">
+          <li class="categories-item item-1">
             <h3>Материалы</h3>
             <a href="catalog.html">на любой вкус</a>
           </li>
-          <li class="categories-item">
+          <li class="categories-item item-2">
             <h3>Инструмент</h3>
             <a href="catalog.html">НА ВСЕ СЛУЧАИ</a>
           </li>
-          <li class="categories-item">
+          <li class="categories-item item-3">
             <h3>Техника</h3>
             <a href="catalog.html">для стройки</a>
           </li>
-          <li class="categories-item">
+          <li class="categories-item item-4">
             <h3>Скидки 50%</h3>
             <a href="catalog.html">На 350 ТОВАРОВ</a>
           </li>
-          <li class="categories-item">
+          <li class="categories-item item-5">
             <h3>Доставка</h3>
             <a href="catalog.html">Бесплатно</a>
           </li>
+          <li class="categories-item slider-item">
+            <img src="img/catalog-perf.jpg" width="620" height="266" alt="Мужчина в каске с перфоратором фирмы BOSH">
+            <h3>Перфораторы</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ </a>
+          </li>
+          <li class="categories-item slider-item">
+            <img src="img/drill-slider.jpg" alt="Мужчина в каске с дрелью фирмы BOSH">
+            <h3>Дрели</h3>
+            <p>Соседям на радость!</p>
+            <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+          </li>
         </ul>
-        <ul class="categories-slider">
+        <!--<ul class="categories-slider">
           <li class="slider-item">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
@@ -92,7 +112,7 @@
             <img src="img/drill-slider.jpg" alt="Мужчина в каске с дрелью фирмы BOSH">
             <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
           </li>
-        </ul>
+        </ul> -->
       </section>
                 <!--/КАТЕГОРИИ-->
 
@@ -102,25 +122,25 @@
           <a class="button" href="catalog.html">все популярные товары</a>
         </div>
         <ul class="popular-product-list">
-          <li class="popular-product-item">
+          <li class="popular-product-item popular-1">
             <img src="img/poppular-product-1.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 9000">
             <p>Перфоратор BOSCH BFG 9000</p>
             <p>32500 Р.</p>
             <a href="">25500 Р.</a>
           </li>
-          <li class="popular-product-item">
+          <li class="popular-product-item popular-2">
             <img src="img/product-3.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 3000">
             <p>Перфоратор BOSCH BFG 3000</p>
             <p>22500 Р.</p>
             <a href="">15500 Р.</a>
           </li>
-          <li class="popular-product-item">
+          <li class="popular-product-item popular-3">
             <img src="img/product-5.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 6000">
             <p>Перфоратор BOSCH BFG 6000</p>
             <p>30500 Р.</p>
             <a href="">25500 Р.</a>
           </li>
-          <li class="popular-product-item">
+          <li class="popular-product-item popular-4">
             <img src="img/product-9.jpg" width="184" height="164" alt="На фотографии Перфоратор BOSCH BFG 2000">
             <p>Перфоратор BOSCH BFG 2000</p>
             <p></p>
@@ -136,14 +156,14 @@
           <a class="button" href="">все производители</a>
         </div>
         <ul class="makers-list">
-          <li class="makers-item"><a href=""><img src="img/bosh-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/makita-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/dewalt-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/interskol-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/hitachi-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/lg-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/aeg-product.jpg" width="220" height="145" alt=""></a></li>
-          <li class="makers-item"><a href=""><img src="img/metabo-product.jpg" width="220" height="145" alt=""></a></li>
+          <li class="makers-item makers-1"><a href=""><img src="img/bosh-product.jpg" width="220" height="145" alt="Логотип компании'BOSH''"></a></li>
+          <li class="makers-item makers-2"><a href=""><img src="img/makita-product.jpg" width="220" height="145" alt="Логотип компании'MAKITA'"></a></li>
+          <li class="makers-item makers-3"><a href=""><img src="img/dewalt-product.jpg" width="220" height="145" alt="Логотип компании 'DeWalt'"></a></li>
+          <li class="makers-item makers-4"><a href=""><img src="img/interskol-product.jpg" width="220" height="145" alt="Логотип компании 'Интерскол'"></a></li>
+          <li class="makers-item makers-5"><a href=""><img src="img/hitachi-product.jpg" width="220" height="145" alt="Логотип компании 'HITACHI'"></a></li>
+          <li class="makers-item makers-6"><a href=""><img src="img/lg-product.jpg" width="220" height="145" alt="Логотип компании 'LG'"></a></li>
+          <li class="makers-item makers-7"><a href=""><img src="img/aeg-product.jpg" width="220" height="145" alt="Логотип компании 'AEG'"></a></li>
+          <li class="makers-item makers-8"><a href=""><img src="img/metabo-product.jpg" width="220" height="145" alt="Логотип компании 'METABO'"></a></li>
         </ul>
       </section>
                 <!--ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
@@ -182,7 +202,7 @@
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
             ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
           </p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
             Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivery-list">
             <li class="delivery-item">
@@ -211,74 +231,74 @@
     </main>
 
     <footer class="page-footer main-footer">
-
-
-      <div class="footer-site-navigation">
-        <a href="#"><img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item"><a href="">Компания</a></li>
-          <li class="footer-navigation-item"><a href="">Новости</a></li>
-          <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
-          <li class="footer-navigation-item"><a href="">Доставка</a></li>
-          <li class="footer-navigation-item"><a href="">Контакты</a></li>
-        </ul>
-      </div>
-
-
-      <div class="footer-midle-block">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-        </p>
-        <ul class="footer-catalog-navigation-list">
-          <li class="footer-catalog-navigation-item"><a href="catalog.html">Материалы</a></li>
-          <li class="footer-catalog-navigation-item"><a href="catalog.html">Техника</a></li>
-          <li class="footer-catalog-navigation-item"><a href="catalog.html">Инструмент</a></li>
-          <li class="footer-catalog-navigation-item"><a href="catalog.html">Спецпредложения</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-under-block">
-
-        <section class="copyright">
-          <h2 class="visually-hidden">Авторские парва</h2>
-          <p>© 2010–2019 Компания «Техномарт»<br>
-            Все права защищены</p>
-        </section>
-                  <!--/Авторские парва-->
-
-        <section class="socials">
-          <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="socials-list">
-            <li><a href="">Вк</a></li>
-            <li><a href="">ФБ</a></li>
-            <li><a href="">ИНСТАГРАМ</a></li>
+      <div class="container">
+        <div class="footer-site-navigation">
+          <a href="#"><img src="img/logo.svg" alt="Логотип интернет-магазина 'ТЕХНОМАРТ'"></a>
+          <ul class="footer-navigation-list">
+            <li class="footer-navigation-item"><a href="">Компания</a></li>
+            <li class="footer-navigation-item"><a href="">Новости</a></li>
+            <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-navigation-item"><a href="">Доставка</a></li>
+            <li class="footer-navigation-item"><a href="">Контакты</a></li>
           </ul>
-        </section>
-                  <!--/Социальные сети-->
+        </div>
 
-        <section class="development">
-          <h2 class="visually-hidden">Разработка</h2>
-          <div class="feedback">
-            <p>Обратная связь:</p>
-            <a href="">mail@htmlacademy.ru</a>
-          </div>
-          <div class="development-proj">
-            <p>Разработано —</p>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-          </div>
-        </section>
-                  <!--/Разработка-->
 
+        <div class="footer-midle-block">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </p>
+          <ul class="footer-catalog-navigation-list">
+            <li class="footer-catalog-navigation-item"><a href="catalog.html">Материалы</a></li>
+            <li class="footer-catalog-navigation-item"><a href="catalog.html">Техника</a></li>
+            <li class="footer-catalog-navigation-item"><a href="catalog.html">Инструмент</a></li>
+            <li class="footer-catalog-navigation-item"><a href="catalog.html">Спецпредложения</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-under-block">
+
+          <section class="copyright">
+            <h2 class="visually-hidden">Авторские парва</h2>
+            <p>© 2010–2019 Компания «Техномарт»<br>
+              Все права защищены</p>
+          </section>
+                    <!--/Авторские парва-->
+
+          <section class="socials">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="socials-list">
+              <li><a href="">Вк</a></li>
+              <li><a href="">ФБ</a></li>
+              <li><a href="">ИНСТАГРАМ</a></li>
+            </ul>
+          </section>
+                    <!--/Социальные сети-->
+
+          <section class="development">
+            <h2 class="visually-hidden">Разработка</h2>
+            <div class="feedback">
+              <p>Обратная связь:</p>
+              <a href="">mail@htmlacademy.ru</a>
+            </div>
+            <div class="development-proj">
+              <p>Разработано —</p>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </div>
+          </section>
+          <!--/Разработка-->
+        </div>
       </div>
+
     </footer>
 
-    <section>
+    <section class="modal">
       <h2>Личный кабинет</h2>
       <button type="button">Закрыть</button>
     </section>
               <!--/ЛИЧНЫЙ КАБИНЕТ-->
 
-    <section>
+    <section class="modal">
       <h2>Как до нас добратсья?</h2>
       <button type="button">Закрыть</button>
     </section>
